// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traverse-up > can traverse up to pick the config file from ./a > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/traverse-up/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started

Hello from /ROOT/test/__fixtures__/traverse-up/a
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1 > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/traverse-up/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1/a11/a112 > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/traverse-up/a/a1/a11/nadle.config.mjs</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1/a11/a112
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;

exports[`traverse-up > can traverse up to pick the config file from ./a/a1/a12 > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/traverse-up/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started

Hello from /ROOT/test/__fixtures__/traverse-up/a/a1/a12
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;
